1.3.1 Patch. Fixed .box-static overflow. Added standard margins to .box classes

--- a/flexgrid.css
+++ b/flexgrid.css
@@ -1,7 +1,7 @@
 /**
  *	Flexgrid.css
  *	Flebox 12 column grid with flexible layouts
- *	Version: 1.3
+ *	Version: 1.3.1
  *	Author: Control
  *	License: Licensed under the MIT/X11 License (http://opensource.org/licenses/MIT)
  */
@@ -196,6 +196,22 @@
 	padding-right: 1em;
 }
 
+.row-sm > [class^="box"], .row-md > [class^="box"] {
+	margin-bottom: 0;
+}
+
+.row > [class^="box"] {
+	margin-bottom: 1em;
+}
+
+.row-reverse-sm > [class^="box"], .row-reverse-md > [class^="box"] {
+	margin-top: 0;
+}
+
+.row-reverse > [class^="box"] {
+	margin-top: 1em;
+}
+
 .gutterless > [class^="box"] {
 	padding-left: 0em;
 	padding-right: 0em;
@@ -208,13 +224,14 @@
 
 .column [class^="box"],
 .column-reverse [class^="box"] {
-	max-width: none;
+	max-width: 100%;
 }
 
 .box {
 	-webkit-box-flex: 1;
 	-ms-flex: 1;
 	flex: 1;
+	max-width: 100%;
 }
 
 .box-sm-flex, .box-sm-flex-1, .box-sm-flex-2, .box-sm-flex-3, .box-sm-flex-4, .box-sm-flex-5, .box-sm-flex-6, .box-sm-flex-7, .box-sm-flex-8, .box-sm-flex-9, .box-sm-flex-10, .box-sm-flex-11, .box-sm-flex-12,
@@ -222,6 +239,7 @@
 	-webkit-box-flex: 1;
 	-ms-flex: 1 1 auto;
 	flex: 1 1 auto;
+	max-width: 100%;
 }
 
 .box-flex,
@@ -229,78 +247,91 @@
 	-webkit-box-flex: 1;
 	-ms-flex: 1 1 auto;
 	flex: 1 1 auto;
+	max-width: 100%;
 }
 
 .box-flex-2 {
 	-webkit-box-flex: 2;
 	-ms-flex: 2 1 auto;
 	flex: 2 1 auto;
+	max-width: 100%;
 }
 
 .box-flex-3 {
 	-webkit-box-flex: 3;
 	-ms-flex: 3 1 auto;
 	flex: 3 1 auto;
+	max-width: 100%;
 }
 
 .box-flex-4 {
 	-webkit-box-flex: 4;
 	-ms-flex: 4 1 auto;
 	flex: 4 1 auto;
+	max-width: 100%;
 }
 
 .box-flex-5 {
 	-webkit-box-flex: 5;
 	-ms-flex: 5 1 auto;
 	flex: 5 1 auto;
+	max-width: 100%;
 }
 
 .box-flex-6 {
 	-webkit-box-flex: 6;
 	-ms-flex: 6 1 auto;
 	flex: 6 1 auto;
+	max-width: 100%;
 }
 
 .box-flex-7 {
 	-webkit-box-flex: 7;
 	-ms-flex: 7 1 auto;
 	flex: 7 1 auto;
+	max-width: 100%;
 }
 
 .box-flex-8 {
 	-webkit-box-flex: 8;
 	-ms-flex: 8 1 auto;
 	flex: 8 1 auto;
+	max-width: 100%;
 }
 
 .box-flex-9 {
 	-webkit-box-flex: 9;
 	-ms-flex: 9 1 auto;
 	flex: 9 1 auto;
+	max-width: 100%;
 }
 
 .box-flex-10 {
 	-webkit-box-flex: 10;
 	-ms-flex: 10 1 auto;
 	flex: 10 1 auto;
+	max-width: 100%;
 }
 
 .box-flex-11 {
 	-webkit-box-flex: 11;
 	-ms-flex: 11 1 auto;
 	flex: 11 1 auto;
+	max-width: 100%;
 }
 
 .box-flex-12 {
 	-webkit-box-flex: 12;
 	-ms-flex: 12 1 auto;
 	flex: 12 1 auto;
+	max-width: 100%;
 }
 
 .box-static {
 	-webkit-box-flex: 0;
 	-ms-flex: 0 0 auto;
 	flex: 0 0 auto;
+	max-width: 100%;
 }
 
 .box-sm-1, .box-sm-2, .box-sm-3, .box-sm-4, .box-sm-5, .box-sm-6, .box-sm-7, .box-sm-8, .box-sm-9, .box-sm-10, .box-sm-11, .box-sm-12,
@@ -698,6 +729,13 @@
 		justify-content: space-evenly
 	}
 
+	.row-sm > [class^="box"] {
+		margin-bottom: 1em;
+	}
+	.row-reverse-sm > [class^="box"] {
+		margin-top: 1em;
+	}
+
 	.gutterless-sm > [class^="box"] {
 		padding-left: 0em;
 		padding-right: 0em;
@@ -717,6 +755,7 @@
 		-webkit-box-flex: 1;
 		-ms-flex: 1;
 		flex: 1;
+		max-width: 100%;
 	}
 
 	.box-sm-flex,
@@ -724,78 +763,91 @@
 		-webkit-box-flex: 1;
 		-ms-flex: 1 1 auto;
 		flex: 1 1 auto;
+		max-width: 100%;
 	}
 
 	.box-sm-flex-2 {
 		-webkit-box-flex: 2;
 		-ms-flex: 2 1 auto;
 		flex: 2 1 auto;
+		max-width: 100%;
 	}
 
 	.box-sm-flex-3 {
 		-webkit-box-flex: 3;
 		-ms-flex: 3 1 auto;
 		flex: 3 1 auto;
+		max-width: 100%;
 	}
 
 	.box-sm-flex-4 {
 		-webkit-box-flex: 4;
 		-ms-flex: 4 1 auto;
 		flex: 4 1 auto;
+		max-width: 100%;
 	}
 
 	.box-sm-flex-5 {
 		-webkit-box-flex: 5;
 		-ms-flex: 5 1 auto;
 		flex: 5 1 auto;
+		max-width: 100%;
 	}
 
 	.box-sm-flex-6 {
 		-webkit-box-flex: 6;
 		-ms-flex: 6 1 auto;
 		flex: 6 1 auto;
+		max-width: 100%;
 	}
 
 	.box-sm-flex-7 {
 		-webkit-box-flex: 7;
 		-ms-flex: 7 1 auto;
 		flex: 7 1 auto;
+		max-width: 100%;
 	}
 
 	.box-sm-flex-8 {
 		-webkit-box-flex: 8;
 		-ms-flex: 8 1 auto;
 		flex: 8 1 auto;
+		max-width: 100%;
 	}
 
 	.box-sm-flex-9 {
 		-webkit-box-flex: 9;
 		-ms-flex: 9 1 auto;
 		flex: 9 1 auto;
+		max-width: 100%;
 	}
 
 	.box-sm-flex-10 {
 		-webkit-box-flex: 10;
 		-ms-flex: 10 1 auto;
 		flex: 10 1 auto;
+		max-width: 100%;
 	}
 
 	.box-sm-flex-11 {
 		-webkit-box-flex: 11;
 		-ms-flex: 11 1 auto;
 		flex: 11 1 auto;
+		max-width: 100%;
 	}
 
 	.box-sm-flex-12 {
 		-webkit-box-flex: 12;
 		-ms-flex: 12 1 auto;
 		flex: 12 1 auto;
+		max-width: 100%;
 	}
 
 	.box-sm-static {
 		-webkit-box-flex: 0;
 		-ms-flex: 0 0 auto;
 		flex: 0 0 auto;
+		max-width: 100%;
 	}
 
 	.box-sm-1 {
@@ -1185,6 +1237,14 @@
 		-webkit-justify-content: space-evenly;
 		-ms-flex-pack: space-evenly;
 		justify-content: space-evenly
+	}
+
+	.row-md > [class^="box"] {
+		margin-bottom: 1em;
+	}
+
+	.row-reverse-md > [class^="box"] {
+		margin-top: 1em;
 	}
 
 	.gutterless-md > [class^="box"] {
